@@ -7,10 +7,6 @@ an array reference.
 - Add a way (and an option) to parse multiple dc:items into an array reference:
     - http://rt.cpan.org/Public/Bug/Display.html?id=6000
 
-- Convert an array of skipDays/day's or skipHours/hour's to multiple tags,
-when converting to text.
-    - http://rt.cpan.org/Public/Bug/Display.html?id=40978 
-
 --- before the next release-ish
 
 - wrong handling enclosure subelement of item
